--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friktionless Labs - Advanced Space Systems Engineering</title>
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="friktionless, deep space tech, space startup, SDA, SSA">
+    <title>friktionless(Labs) - beyond Space! -Advanced Space Systems Engineering</title>
     <style>
         * {
             margin: 0;
