--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     <!-- Navigation -->
     <nav>
         <div class="container">
-            <div class="logo">Friktionless Labs</div>
+            <div class="logo">friktionless(Labs)</div>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#services">Services</a></li>
@@ -504,17 +504,16 @@
             <p>Ready to take your space mission to the next level? Our team of experts is here to help you turn your vision into reality. Whether you need a complete system solution or specialized consultancy, we're ready to launch.</p>
             <a href="mailto:contact@friktionless-labs.space" class="contact-button">Get In Touch</a>
             <p style="margin-top: 2rem; font-size: 0.9rem;">
-                📧 contact@friktionless-labs.space<br>
-                📞 +1 (555) SPACE-01<br>
-                📍 Innovation Hub, Aerospace District
+                📧 contact@friktionless.com<br>
+                📞 +91 SPACE<br>
             </p>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2026 Friktionless Labs. Beyond Space!</p>
-        <p style="margin-top: 0.5rem; font-size: 0.9rem;">Engineering Excellence for the New Space Economy</p>
+        <p>&copy; 2026 friktionless(Labs). Beyond Space!</p>
+        <p style="margin-top: 0.5rem; font-size: 0.9rem;">beyond Space! -Engineering Excellence for space & beyond</p>
     </footer>
 
     <script>
