--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friktionless Labs - Beyond Space!</title>
+     <meta keywords="friktionless, SDA, SSA, Space domain awareness, situational awareness, deep space startup, life sciences">
+    <title>Friktionless Labs - Beyond Space! Beyond Life!</title>
     <style>
         * {
             margin: 0;
